# SoundArtificialityDetection

./: .#README.md  .gitignore  FourierTransform.py  PKG-INFO  README.md  SAD_protocol.ipynb  audiojikken6.py  cepstrum.py  liveness_sensor.py  pyproject.toml  requirements.txt  script2020010501.py  setup.py
.pyenv/: FourierTransform.py  cepstrum.py  liveness_sensor.py  liveness_sensor_org.py  make_concat_and_mix.py  pyvenv.cfg  replay_sensor.py  requirements.txt  script.py  script2020010501.py  script_shiraishi.py
ASVspoof2019Contrib/: README.PA.txt
ASVspoof2019Contrib/ASVspoof2019_PA_asv_protocols/: ASVspoof2019.PA.asv.dev.female.trl.txt  ASVspoof2019.PA.asv.dev.female.trn.txt  ASVspoof2019.PA.asv.dev.gi.trl.txt  ASVspoof2019.PA.asv.dev.male.trl.txt  ASVspoof2019.PA.asv.dev.male.trn.txt  ASVspoof2019.PA.asv.eval.female.trn.txt  ASVspoof2019.PA.asv.eval.male.trn.txt
SoundArtificialityDetection/: ASVspoof2019protocol.py  cis.py  liveness_sensor.py
emm201903/: 201803poster.pptx
paper/CSP2021/: CSP2021_kotaro.docx  vps_template_2021.docx  ~$s_template_2021.docx
paper/emm201903/: 201803posterkuroda.pptx  3EMM.doc  ken1.doc  ショートプレゼン黒田.pptx
paper/emm202001/: 1EMM.tex  emm202001.bib  emm202001.dvi  emm202001.pptx  emm202001.tex  ken1.tex
paper/shiraishi202003/: replay_sensor.py  script_shiraishi.py  卒論図.pptx  卒論発表.pptx  卒論発表①.pptx  卒論発表②.pptx  研究図.xlsx  薗田先生.pptx  論文の要旨.doc
paper/src/: 1EMM.doc  _template_ken1.tex  _template_renraku.tex
src/SoundArtificialityDetection/: ASVspoof2019protocol.py
src/soundartificialitydetection.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+2 files in other folders)
