[tool.poetry]
name = "soundartificialitydetection"
version = "0.2.2"
description = ""
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
japanize-matplotlib = "^1.1.3"
SoundFile = "^0.10.3"
pandas = "^1.5.2"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"

[tool.poetry.dev-dependencies]
pip = "^22.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
