[project]
name = "soundartificialitydetection"
version = "0.2.6"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioread>=3.0.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "soundfile>=0.12.1",
]
authors = [
    {"name"="Kotaro SONODA", "email"="kotaro1976@gmail.com"}
]
#include = ["SAD_protocol.ipynb"]

